# predecir-elecciones-chile

./: .gitignore  CNAME  README.md  index.html  install.sh  pyproject.toml  ruff.toml
assets/css/: base.css  graficos.css
contenido/codigo/predecir/2014-2/: index.html
contenido/graficos/ganadores-electoral/: index.html
data/encoders/: comunas-pres-2021-1ra.pkl  electorales-pres-2021-1ra.pkl  grupos-nacionalidades-pres-2021-1ra.pkl  grupos_mesas-pres-2021-1ra.pkl  locales-pres-2021-1ra.pkl  mesas-pres-2021-1ra.pkl  votos-pres-2021-1ra.pkl
data/primary/: grupos-pres-2021-1ra.parquet  grupos-pres-2021-2da.parquet  participacion-pres-2021-1ra.parquet  participacion-pres-2021-2da.parquet  pres-1990-2014.parquet  votacion-pres-2021-1ra.parquet  votacion-pres-2021-2da.parquet
notebooks/: cleaning-presidencial-2021.ipynb  cleaning-presidenciales-1990-2014.ipynb  exploring-presidencial-2021.ipynb  exploring-presidenciales-1990-2014.ipynb  html-graphs.ipynb  intermediate-to-primary-2013-2021.ipynb  predicting-2014-2.ipynb  raw-to-intermediate-2013-2021.ipynb
