# pyproject.toml

[tool.poetry]
name = "predecir-elecciones-chile"
version = "0.1.0"
description = "Un repositorio dedicado al análisis y predicción de elecciones presidenciales en Chile mediante técnicas avanzadas de ciencia de datos."
authors = ["Vicente Agüero <vicenteaguero@uc.cl>"]
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
tqdm = "*"
matplotlib = "*"
numpy = "*"
bs4 = "*"
requests = "^2.32.3"
pyarrow = "^19.0.0"
openpyxl = "^3.1.5"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "^23.7.0"
isort = "^5.10.1"
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
python_files = ["*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"